# bwav-otio-composer

./: .gitignore  README.md  example_usage.py  pyproject.toml
src/bwav_otio_composer/: __init__.py  otio_generator.py
src/bwav_otio_composer/audio_composer/: __init__.py
src/bwav_otio_composer/audio_composer/composer/: __init__.py  audio_to_timeline.py  greedy_heapsort_composer.py  scanline_composer.py
src/bwav_otio_composer/audio_composer/models/: audioclip.py  audiotrack.py
src/bwav_otio_composer/davinci_resolve/default_data/: audio_fxs.json  video_fxs.json
src/bwav_otio_composer/davinci_resolve/metadata_manager/: fx_generator.py
src/bwav_otio_composer/davinci_resolve/models/: resolve_fx.py
src/bwav_otio_composer/opentimelineio/: __init__.pyi  exceptions.pyi  hooks.pyi  media_linker.pyi  opentime.pyi  schemadef.pyi  url_utils.pyi  versioning.pyi
src/bwav_otio_composer/opentimelineio/_opentime/: __init__.pyi  _testing.pyi
src/bwav_otio_composer/opentimelineio/_otio/: __init__.pyi  _testing.pyi
src/bwav_otio_composer/opentimelineio/adapters/: __init__.pyi  adapter.pyi  file_bundle_utils.pyi  otio_json.pyi
src/bwav_otio_composer/opentimelineio/algorithms/: __init__.pyi  filter.pyi  stack_algo.pyi  timeline_algo.pyi  track_algo.pyi
src/bwav_otio_composer/opentimelineio/core/: __init__.pyi  _core_utils.pyi  composable.pyi
src/bwav_otio_composer/opentimelineio/plugins/: __init__.pyi  manifest.pyi  python_plugin.pyi
src/bwav_otio_composer/opentimelineio/schema/: clip.pyi  (+3 more)
src/bwav_otio_composer/utils/: logger.py
tests/: test_audio_to_timeline.py
